fixed text alignment in rtl

--- a/app/assets/stylesheets/rtl_layout.scss
+++ b/app/assets/stylesheets/rtl_layout.scss
@@ -4,15 +4,21 @@
     margin-left: 0;
   }
 
+  .footer-social-icon-text {
+    margin-right: 15px;
+    margin-left: 0;
+  }
+
+  .anchor-text {
+    margin-right: 9px;
+    margin-left: 0;
+  }
+
   .text-start {
     text-align: right !important;
   }
 
-  .footer-social-icon-text {
-    margin-right: 15px !important;
-  }
-
-  .anchor-text {
-    margin-right: 9px !important;
+  .text-end {
+    text-align: left !important;
   }
 }
